Mobile: fix corrupt tag icon overlap, center tag layout

--- a/css/styles.css
+++ b/css/styles.css
@@ -1894,6 +1894,14 @@ section + section::after {
     grid-template-columns: 1fr;
   }
 
+  .corrupt-mystery__roles {
+    justify-content: center;
+  }
+
+  .corrupt-mystery__tag-icon {
+    display: none;
+  }
+
   .corrupt-mystery__img {
     min-height: 200px;
     max-height: 260px;
